# uv-calc-lib

./: pyproject.toml
src/: __init__.py  operations.py
tests/: __init__.py  test_operations.py
