[project]
name = "uv-calc-lib"
version = "0.1.0"
description = "A Python library for arithmatic operations - add, subtract, multiple, divide"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []
authors = [
    {name = "demo", email = "demo@calc.com"}
]

keywords = ["calculator", "arithmetic", "math"]

classifiers = [
    "Development Status :: 0.1.0",
    "Programming Language :: Python :: 3.14"
]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uv_calc_lib"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
